<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="35dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="117dp"
        android:text="@string/info2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="117dp"
        android:text="@string/sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="193dp"
        android:layout_height="97dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/btnfem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fem" />

        <RadioButton
            android:id="@+id/btnmasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masc" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="215dp"
        android:layout_height="26dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ejnombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="103dp"
        android:text="@string/apelldio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="193dp"
        android:layout_height="55dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="72dp"
        android:onClick="Actividad3"
        android:text="@string/ultimopaso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="241dp"
        android:layout_height="49dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/ejapellido" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>